[package]
name = "stun-rs"
version = "0.1.5"
authors = ["Santiago Carot-Nemesio <sancane@gmail.com"]
description = """Rust framework to manage STUN messages"""
documentation = "https://docs.rs/stun-rs"
homepage = "https://github.com/sancane/rustun"
repository = "https://github.com/sancane/rustun"
readme = "README.md"
keywords = ["STUN", "TURN", "ICE"]
license = "MIT/Apache-2.0"
categories = ["network-programming"]
edition = "2018"

[dev-dependencies]
stun-vectors = { path = "../stun-vectors" }

[dependencies]
bounded-integer = { version = "0.5.2", features = ["types"] }
byteorder = "1"
crc = "3.0.0"
fallible-iterator = "0.3.0"
hmac-sha1 = "0.1"
hmac-sha256 = "1.1.2"
hostname-validator = "1.1.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
paste = "1.0.7"
precis-core = "0.1.9"
precis-profiles = "0.1.9"
quoted-string-parser = "0.1.0"
rand = "0.8.5"

[features]
default = []
experiments = []
ice = []
turn = []
