[package]
name = "stun-rs"
version = "0.1.11"
authors = ["Santiago Carot-Nemesio <sancane@gmail.com"]
description = """Rust framework to manage STUN messages"""
documentation = "https://docs.rs/stun-rs"
homepage = "https://github.com/sancane/rustun"
repository = "https://github.com/sancane/rustun"
readme = "README.md"
keywords = ["STUN", "TURN", "ICE"]
license = "MIT/Apache-2.0"
categories = ["network-programming"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
discovery = []
experiments = []
ice = []
mobility = []
turn = []

[dependencies]
base64 = "0.22.0"
bounded-integer = { version = "0.5.8", features = ["types"] }
byteorder = "1.5.0"
crc = "3.2.1"
enumflags2 = "0.7.5"
fallible-iterator = "0.3.0"
hmac-sha1 = "0.2.2"
hmac-sha256 = "1.1.8"
hostname-validator = "1.1.1"
lazy_static = "1.5.0"
md5 = "0.7.0"
paste = "1.0.7"
precis-core = "0.1.11"
precis-profiles = "0.1.12"
quoted-string-parser = "0.1.0"
rand = "0.9.0"

[dev-dependencies]
stun-vectors = { path = "../stun-vectors" }
